new phase picking stuff and updated correlation codes

--- a/correlation/correlation_workflow.ipynb
+++ b/correlation/correlation_workflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "11b8abcc",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "compute_rms (generic function with 3 methods)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,40 +23,56 @@
     "import SeisIO: read_nodal, NodalData, InstrumentPosition, InstrumentResponse, show_str, show_t, show_x, show_os\n",
     "import FFTW: rfft, irfft\n",
     "import Base:show, size, summary\n",
-    "include(\"correlation_codes/Types.jl\")\n",
-    "include(\"correlation_codes/Nodal.jl\")\n",
-    "include(\"correlation_codes/Misc.jl\")"
+    "include(\"Types.jl\")\n",
+    "include(\"Nodal.jl\")\n",
+    "include(\"Misc.jl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "3f61142e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# THE CURRENT SPLIT POINT IS PROBABLY WRONG- USE 331 AS FIRST AND 2391 AS LAST\n",
-    "\n",
-    "# LOWER THE LOW FK BOUND"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "4c2e7d71",
+   "execution_count": 42,
+   "id": "fe47968c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "workflow (generic function with 2 methods)"
+       "NodalCorrData with 2061 correlations (2 shown)\n",
+       "COORDS: X = 0.0, Y = 0.0, Z = 0.0\n",
+       "  INFO: 32 entries\n",
+       "    ID: N0.00331..OG0                      N0.00332..OG0                      …\n",
+       "  NAME: 325_331                            325_332                            …\n",
+       "   LOC: x 0.0, y 0.0, z 0.0                x 0.0, y 0.0, z 0.0                …\n",
+       "    FS: 401.0                              401.0                              …\n",
+       "  GAIN: 0.0                                0.0                                …\n",
+       "  RESP: a0 1.0, f0 1.0, 1z, 1p             a0 1.0, f0 1.0, 1z, 1p             …\n",
+       " UNITS: m/m                                m/m                                …\n",
+       "   SRC: /auto/petasaur-wd03/greenland/Sto… /auto/petasaur-wd03/greenland/Sto… …\n",
+       "  MISC: 92 entries                         92 entries                         …\n",
+       " NOTES: 0 entries                          0 entries                          …\n",
+       "     T: 2019-07-05T15:05:05 (0 gaps)       2019-07-05T15:05:05 (0 gaps)       …\n",
+       "  CORR: 48.0002                            -152.0                             …\n"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "# list all correlation files\n",
+    "sgn = \"both\"\n",
+    "cmin,cmax = 750,4250\n",
+    "path = string(\"/fd1/solinger/correlations/fk_\",cmin,\"_\",cmax,\"/\")\n",
+    "C1 = JLD2.load(path*\"correlations_2019-07-05T15:54:05.jld2\")[\"NodalCorrData\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c2e7d71",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "function workflow(files,cc_len,maxlag,freqmin,freqmax,fs,cmin,cmax,sgn,time_norm,\n",
     "                  chans,output_times,out_path,samples_per_file=[])\n",
@@ -75,7 +91,7 @@
     "    seconds_per_file = samples_per_file/N.fs[1]\n",
     "    num_files = length(files)\n",
     "    num_chans = chans[2]-chans[1]+1\n",
-    "    midpoint = Int64(chans[1]+(chans[2]+1-chans[1])/2-1)\n",
+    "    midpoint = Int64(chans[1]+(chans[2]-chans[1])/2-1)\n",
     "\n",
     "    # make iterator for saving substacks\n",
     "    t = 1\n",
@@ -96,50 +112,58 @@
     "            # read the file\n",
     "            N = read_nodal(\"segy\", files[i])[chans[1]:chans[end]]\n",
     "\n",
-    "                # check that file is correct length\n",
-    "                if N.info[\"orignx\"] == samples_per_file && isempty(N.data) == false\n",
-    "                    # preprocess\n",
-    "                    resample!(N,fs)\n",
-    "                    detrend!(N)\n",
-    "                    taper!(N)\n",
-    "                    bandpass!(N,freqmin,freqmax,zerophase=true)\n",
+    "            # check that file is correct length\n",
+    "            if size(N.data)[1] == samples_per_file && isempty(N.data) == false\n",
+    "  \n",
+    "                # preprocess\n",
+    "                resample!(N,fs)\n",
+    "                detrend!(N)\n",
+    "                taper!(N)\n",
+    "                bandpass!(N,freqmin,freqmax,zerophase=true)\n",
     "\n",
-    "                    # send to GPU\n",
-    "                    N.data = N.data |> cu\n",
+    "                # send to GPU\n",
+    "                N.data = N.data |> cu\n",
     "\n",
-    "                    # apply fk filter to each leg of the cable\n",
-    "                    split = midpoint-chans[1]+1\n",
-    "                    N_leg_1 = N[1:split]\n",
-    "                    N_leg_2 = N[split+1:end]\n",
-    "                    NF_leg_1 = rfft(N_leg_1,[1,2])\n",
-    "                    NF_leg_2 = rfft(N_leg_2,[1,2])\n",
-    "                    fk!(NF_leg_1,cmin,cmax,sgn)\n",
-    "                    fk!(NF_leg_2,cmin,cmax,sgn)\n",
-    "                    N_leg_1 = irfft(NF_leg_1,[1,2])\n",
-    "                    N_leg_2 = irfft(NF_leg_2,[1,2])\n",
-    "                    N = merge_channels(N_leg_1,N_leg_2,2)\n",
+    "                # apply fk filter to each leg of the cable\n",
+    "                split = midpoint-chans[1]+1\n",
+    "                N_leg_1 = N[1:split]\n",
+    "                N_leg_2 = N[split+1:end]\n",
+    "                NF_leg_1 = rfft(N_leg_1,[1,2])\n",
+    "                NF_leg_2 = rfft(N_leg_2,[1,2])\n",
+    "                fk!(NF_leg_1,cmin,cmax,sgn)\n",
+    "                fk!(NF_leg_2,cmin,cmax,sgn)\n",
+    "                N_leg_1 = irfft(NF_leg_1,[1,2])\n",
+    "                N_leg_2 = irfft(NF_leg_2,[1,2])\n",
+    "                N = merge_channels(N_leg_1,N_leg_2,2)\n",
     "\n",
-    "                    # spectral whitening- probably can group fk and whitening to remove one fft\n",
-    "                    # need to get updated whitening code up to snuff\n",
-    "                    NF = rfft(N,[1])\n",
-    "                    whiten!(NF,freqmin,freqmax)\n",
-    "                    N = irfft(NF,[1])\n",
+    "                # spectral whitening- probably can group fk and whitening to remove one fft\n",
+    "                # need to get updated whitening code up to snuff\n",
+    "                NF = rfft(N,[1])\n",
+    "                whiten!(NF,freqmin,freqmax)\n",
+    "                N = irfft(NF,[1])\n",
     "\n",
-    "                    # one bit normalization\n",
-    "                    N.data .= sign.(N.data)\n",
+    "                # one bit normalization\n",
+    "                N.data .= sign.(N.data)\n",
     "\n",
-    "                    # slice\n",
-    "                    sliced_data = slice(N,10)\n",
-    "                    NP = NodalProcessedData(N.n,size(sliced_data)[1],N.ox,N.oy,N.oz,N.info,N.id,N.name,\n",
-    "                               N.loc,fs*ones(N.n),N.gain,Float64(freqmin),Float64(freqmax),cc_len,\"1bit\",\n",
-    "                               N.resp,N.units,N.src,N.misc,N.notes,N.t,sliced_data)\n",
+    "                # slice\n",
+    "                sliced_data = slice(N,10)\n",
+    "                NP = NodalProcessedData(N.n,size(sliced_data)[1],N.ox,N.oy,N.oz,N.info,N.id,N.name,\n",
+    "                           N.loc,fs*ones(N.n),N.gain,Float64(freqmin),Float64(freqmax),cc_len,\"1bit\",\n",
+    "                           N.resp,N.units,N.src,N.misc,N.notes,N.t,sliced_data)\n",
     "\n",
-    "                    # cross correlate- CHECKED\n",
-    "                    NF = rfft(NP,[1])\n",
-    "                    corr = correlate(NF,Int64(maxlag*NF.fs[1]))\n",
-    "                    corr_mat = corr_mat + sum(corr,dims=3)\n",
-    "                end\n",
-    "            \n",
+    "                # cross correlate- CHECKED\n",
+    "                NF = rfft(NP,[1])\n",
+    "                corr = correlate(NF,Int64(maxlag*NF.fs[1]))\n",
+    "                corr_mat .= corr_mat .+ sum(corr,dims=3)\n",
+    "                println(files[i])\n",
+    "                flush(stdout)\n",
+    "            # report failed file check\n",
+    "            else\n",
+    "                msg = \"Fewer samples than expected!\"\n",
+    "                error_string = \"\\nDid not correlate file \"*files[i]*\"\\n\"*msg*\"\\n\"\n",
+    "                write(error_file,error_string)\n",
+    "             end\n",
+    "                \n",
     "        # exception handling\n",
     "        catch error\n",
     "            bt = backtrace()\n",
@@ -151,18 +175,17 @@
     "        # count time steps and save output\n",
     "        if i > 1\n",
     "            datetime = datetime + Second(seconds_per_file)\n",
-    "        end       \n",
+    "        end   \n",
     "        if datetime <= output_times[t] && datetime+Second(seconds_per_file) > output_times[t]\n",
     "            t = t + 1\n",
-    "            corr_mat = real(reshape(Array(corr_mat),size(corr_mat,1),size(corr_mat,2)))\n",
     "            NC = NodalCorrData(NF.n,NF.ox,NF.oy,NF.oz,NF.info,NF.id,NF.name,NF.loc,NF.fs,\n",
     "                               NF.gain,NF.freqmin,NF.freqmax,cc_len,maxlag,\"1bit\",true,NF.resp,NF.units,\n",
-    "                               NF.src,NF.misc,NF.notes,NF.t,corr_mat)\n",
+    "                               NF.src,NF.misc,NF.notes,NF.t,real(Array(corr_mat)))\n",
     "            fname = string(out_path,\"correlations_\",datetime,\".jld2\")\n",
     "            JLD2.save(fname,Dict(\"NodalCorrData\"=>NC))\n",
     "\n",
     "            # clear output matrix\n",
-    "            corr_mat = zeros(Int64((maxlag*fs)*2+1), Int64(num_chans*(num_chans-1)/2)) |> cu\n",
+    "            corr_mat .= 0\n",
     "        end\n",
     "        \n",
     "    end\n",
@@ -173,17 +196,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "40b48ffd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"pos\""
+       "\"both\""
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,19 +214,19 @@
    "source": [
     "# list all 1khz and resampled Greenland files\n",
     "path_1khz = \"/1-fnp/petasaur/p-wd03/greenland/Store Glacier DAS data/\"\n",
-    "path_resampled = \"/1-fnp/pnwstore1/p-wd05/greenland/resampled/\"\n",
+    "path_resampled = \"/1-fnp/pnwstore1/p-wd05/greenland/data/resampled/\"\n",
     "files_1khz = glob(\"1kHz/*\",path_1khz)\n",
     "files_resampled = glob(\"*\",path_resampled)\n",
     "files = cat(files_1khz,files_resampled,dims=1)\n",
-    "N = read_nodal(\"segy\", files[2])\n",
+    "N = read_nodal(\"segy\", files[1])\n",
     "\n",
     "# choose channels\n",
     "chan_start = 331\n",
-    "chan_end = Int64(N.n-chan_start+1)\n",
+    "chan_end = 2391\n",
     "chans = [chan_start,chan_end]\n",
     "\n",
     "# set filter band\n",
-    "freqmin,freqmax = 1,20\n",
+    "freqmin,freqmax = 1,200\n",
     "fs = freqmax*2+1\n",
     "\n",
     "# set time normalization\n",
@@ -213,30 +236,12 @@
     "cc_len = 10\n",
     "maxlag = 1\n",
     "\n",
+    "# set samples per file (ideally this is in the metadata)\n",
+    "samples_per_file = 30000\n",
+    "\n",
     "# choose fk filter bounds\n",
-    "cmin,cmax = 1000,4000\n",
-    "sgn = \"pos\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "8645e8d6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2358"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "chan_end"
+    "cmin,cmax = 750,4250\n",
+    "sgn = \"both\""
    ]
   },
   {
@@ -247,15 +252,15 @@
    "outputs": [],
    "source": [
     "# set substack timing and output path\n",
-    "substack_time = Hour(1)\n",
-    "Ns,Nf = read_nodal(\"segy\", files_1khz[2]), read_nodal(\"segy\", files_1khz[end])\n",
+    "substack_time = Minute(1)\n",
+    "Ns,Nf = read_nodal(\"segy\", files[1]), read_nodal(\"segy\", files_resampled[end])\n",
     "start_datetime,end_datetime = get_datetime(Ns),get_datetime(Nf)\n",
     "output_times = start_datetime+substack_time:substack_time:end_datetime\n",
-    "out_path = string(\"/fd1/solinger/correlations/1khz/fk_\",cmin,\"_\",cmax,\"/all/fk_\",sgn,\"/\")\n",
+    "out_path = string(\"/fd1/solinger/correlations/fk_\",cmin,\"_\",cmax,\"/\")\n",
     "\n",
     "# correlate 1khz files\n",
-    "workflow(files[2:end],cc_len,maxlag,freqmin,freqmax,fs,\n",
-    "              cmin,cmax,sgn,time_norm,chans,output_times,out_path)"
+    "workflow(files,cc_len,maxlag,freqmin,freqmax,fs,\n",
+    "              cmin,cmax,sgn,time_norm,chans,output_times,out_path,samples_per_file)"
    ]
   },
   {
