AGU code updates

--- a/file_wrangling.ipynb
+++ b/file_wrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "d2b3afb4",
    "metadata": {},
    "outputs": [],
@@ -20,6 +20,52 @@
     "import types\n",
     "import copy\n",
     "import h5py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "bbd4af86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "\n",
+    "Read and downsample the VSP files\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "f = \"borehole_data/VSP/RESPONDER_Jul2019_L028_300mSouth.sgy\"\n",
+    "st = _read_segy(f,npts=2799)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "2a7c9e41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1046 Trace(s) in Stream:\n",
+       "\n",
+       "Seq. No. in line:  318 | 2019-07-07T12:14:03.000000Z - 2019-07-07T12:14:03.699500Z | 4000.0 Hz, 2799 samples\n",
+       "...\n",
+       "(1044 other traces)\n",
+       "...\n",
+       "Seq. No. in line: 1363 | 2019-07-07T12:14:03.000000Z - 2019-07-07T12:14:03.699500Z | 4000.0 Hz, 2799 samples\n",
+       "\n",
+       "[Use \"print(Stream.__str__(extended=True))\" to print all Traces]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st"
    ]
   },
   {
